[package]
name = "mosaic_generator"
version = "0.1.0"
edition = "2021"
authors = ["Przemyslaw Kaminski <przemyslaw.m.kaminski@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
image = "0.24.3"
rayon = "1.5.3"

[profile.release]
codegen-units = 1
lto = true
