[package]
name = "mosaic_generator"
version = "0.1.0"
edition = "2021"
authors = ["Przemyslaw Kaminski <przemyslaw.m.kaminski@gmail.com>"]

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
image = "0.24.6"
rayon = "1.7.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
