[package]
name = "mosaic_generator"
version = "0.1.0"
edition = "2021"
authors = ["Przemyslaw Kaminski <przemyslaw.m.kaminski@gmail.com>"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
image = "0.25.1"
rayon = "1.10.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
